# UPSLP-PROGRA2_Proyecto-Rutas

./: .gitignore  CMakeLists.txt  USUARIO.md  main.c
.cache/clangd/index/: IO.c.54A448CA503AC5DF.idx  auth.c.8D1A70DAA6E94C49.idx  auth.h.092260A557717124.idx  core.c.8A6B10187773FE8A.idx  core.h.4CDCE2C91222A5AB.idx  file.c.B9EFA1329F63EFB9.idx  io.h.60D0A087157B9352.idx  llist.c.88D97525B92D7EA2.idx  llist.h.B127319F340166B2.idx  logic.c.E50BC812074CCF99.idx  logic.h.4F3B872567125112.idx  main.c.DDA22A2D9047C4EE.idx  menu.c.6AD683B67F07FC18.idx  routes.c.05AC6C2D71A1E222.idx  routes.h.C48FC537824464FA.idx  str.c.B3B2E9621AF4AB08.idx  table.c.998C8A03A86409AF.idx  win.c.23486D297A3432DF.idx  win.h.ACCDBC9EE6D2BF9E.idx
debug/: RutasDeTransporte  RutasdeTransporte  debug.dta
include/: IO.h
libs/UI/: CMakeLists.txt  io.h
libs/UI/io/: IO.c
libs/UI/win/: win.c
libs/auth/: CMakeLists.txt  auth.c  auth.h
libs/core/: CMakeLists.txt  admin.c  core.c  core.h  interface.c  logic.c  logic.h  user.c
libs/llist/: CMakeLists.txt  llist.c  llist.h
libs/routes/: CMakeLists.txt  routes.c  routes.h
libs/tui/: CMakeLists.txt  input.c  input.h  keyboard.h  tui.c  tui.h
libs/tui.old/: input.c  input.h  keyboard.h  tui.c  tui.h
libs/ui/: CMakeLists.txt  io.h  sys.h  win.h
libs/ui/io/: IO.c  file.c  str.c
libs/ui/win/: menu.c  table.c  win.c
proyecto/auth/: auth.c  auth.h
proyecto/core/: proyecto.h
proyecto/routes/: routes.c  routes.h
proyecto/tui/: CMakeLists.txt  tui.c  tui.h
